<resources>
    <string name="app_name">积也</string>
    <string name="title_home">首页</string>
    <string name="title_growth">成长</string>
    <string name="title_news">消息</string>
    <string name="title_grade">班级圈</string>
    <string name="title_mine">我的</string>
    <string name="title_setting">设置</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_baby">添加宝宝</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_up_title_code">验\u3000证\u3000码</string>
    <string name="sign_up_title_invitation">邀\u3000请\u3000码</string>
    <string name="error_invalid_mobile">手机号错误</string>
    <string name="error_invalid_account">手机号错误</string>
    <string name="invalid_fetch_code">请先获取验证码</string>
    <string name="error_invalid_sms_code">验证码错误</string>
    <string name="error_empty_mobile">请输入手机号</string>
    <string name="error_empty_code">请输入验证码</string>
    <string name="error_empty_account">请输入手机号</string>
    <string name="cancel">取消</string>
    <string name="todo">TODO</string>
</resources>
