<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pm.imain.shelf.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_growth"
        android:name="com.pm.imain.shelf.growth.GrowthFragment"
        android:label="@string/title_growth"
        tools:layout="@layout/fragment_growth" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.pm.imain.shelf.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_grade"
        android:name="com.pm.imain.shelf.grade.GradeFragment"
        android:label="@string/title_grade"
        tools:layout="@layout/fragment_grade" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.pm.imain.shelf.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine">
        <!--<action
            android:id="@+id/action_mine_to_setting"
            app:destination="@id/navigation_setting" />-->
        <!--app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />-->
    </fragment>
    <!--<fragment
        android:id="@+id/navigation_setting"
        android:name="com.pm.imain.mine.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />-->
</navigation>